change spatial projection license requirement to gold+